force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/FinServ__Role__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Role__c</fullName>
    <description>Role that describes how the organizational entity or person is involved with the financial account.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ATM</fullName>
                <label>ATM Card Holder</label>
            </value>
            <value>
                <fullName>ATTY</fullName>
                <label>Attorney</label>
            </value>
            <value>
                <fullName>BENE</fullName>
                <label>Beneficiary</label>
            </value>
            <value>
                <fullName>BURY</fullName>
                <label>Burial Fund</label>
            </value>
            <value>
                <fullName>CAND</fullName>
                <label>Candidate</label>
            </value>
            <value>
                <fullName>COMP</fullName>
                <label>Company Org</label>
            </value>
            <value>
                <fullName>CONS</fullName>
                <label>Conservator</label>
            </value>
            <value>
                <fullName>CUST</fullName>
                <label>Custodian</label>
            </value>
            <value>
                <fullName>DBA</fullName>
            </value>
            <value>
                <fullName>DECD</fullName>
                <label>Deceased</label>
            </value>
            <value>
                <fullName>DCOM</fullName>
                <label>DESA Company</label>
            </value>
            <value>
                <fullName>DLND</fullName>
                <label>DESA Landlord</label>
            </value>
            <value>
                <fullName>DSAT</fullName>
                <label>DESA-Tenant</label>
            </value>
            <value>
                <fullName>ESCW</fullName>
                <label>Escrow Agent</label>
            </value>
            <value>
                <fullName>ESRW</fullName>
                <label>Escrow For</label>
            </value>
            <value>
                <fullName>EST</fullName>
                <label>Estate</label>
            </value>
            <value>
                <fullName>EXEC</fullName>
                <label>Executor/trix</label>
            </value>
            <value>
                <fullName>GRNT</fullName>
                <label>Grantor</label>
            </value>
            <value>
                <fullName>GUAR</fullName>
                <label>Guarantor</label>
            </value>
            <value>
                <fullName>GRDN</fullName>
                <label>Guardian</label>
            </value>
            <value>
                <fullName>ILTA</fullName>
                <label>IOLTA</label>
            </value>
            <value>
                <fullName>LAND</fullName>
                <label>Landlord</label>
            </value>
            <value>
                <fullName>LOFF</fullName>
                <label>Lending Officer Role</label>
            </value>
            <value>
                <fullName>LNCO</fullName>
                <label>Loan Co-Signer</label>
            </value>
            <value>
                <fullName>LSET</fullName>
                <label>Loan Setup</label>
            </value>
            <value>
                <fullName>MAIL</fullName>
                <label>Mail Care of</label>
            </value>
            <value>
                <fullName>MINR</fullName>
                <label>Minor</label>
            </value>
            <value>
                <fullName>OWN</fullName>
                <label>NonTax Owner</label>
            </value>
            <value>
                <fullName>SIGN</fullName>
                <label>NonTax Signator</label>
            </value>
            <value>
                <fullName>OEMP</fullName>
                <label>Originating Employee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>