force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Internal_Role__c.field-meta.xml
<CustomField>
    <fullName>Internal_Role__c</fullName>
    <formula>IF(
OR(ISPICKVAL(FinServ__Role__c,&quot;LOFF&quot;),
ISPICKVAL(FinServ__Role__c,&quot;LSET&quot;),
ISPICKVAL(FinServ__Role__c,&quot;OEMP&quot;),
ISPICKVAL(FinServ__Role__c,&quot;ACTO&quot;),
ISPICKVAL(FinServ__Role__c,&quot;RFEM&quot;),
ISPICKVAL(FinServ__Role__c,&quot;SECD&quot;),
ISPICKVAL(FinServ__Role__c,&quot;TEAM&quot;),
ISPICKVAL(FinServ__Role__c,&quot;RESP&quot;)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Role</label>
    <type>Checkbox</type>
</CustomField>