force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <formula>IF( FinServ__FinancialAccount__r.FinServ__PrimaryOwner__r.IsPersonAccount = true, FinServ__FinancialAccount__r.FinServ__PrimaryOwner__r.FirstName &amp;&quot; &quot;&amp;FinServ__FinancialAccount__r.FinServ__PrimaryOwner__r.LastName,
FinServ__FinancialAccount__r.FinServ__PrimaryOwner__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Owner</label>
    <type>Text</type>
</CustomField>