force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Primary_Owner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Account Roles (Primary Owner)</relationshipLabel>
    <relationshipName>Financial_Account_Roles_Primary_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>