force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Related_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Name__c</fullName>
    <formula>IF( FinServ__RelatedAccount__r.IsPersonAccount = True,  FinServ__RelatedAccount__r.FirstName &amp;&quot; &quot;&amp; FinServ__RelatedAccount__r.LastName,
 FinServ__RelatedAccount__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Name</label>
    <type>Text</type>
</CustomField>