force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Relationship_Code__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>