force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/SW_Loan_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>SW_Loan_Role_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SW Loan Role ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>