force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/SW_Percent_Responsible__c.field-meta.xml
<CustomField>
    <fullName>SW_Percent_Responsible__c</fullName>
    <label>Percent Responsible</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>