force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/SW_Proposed_Loan_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_Proposed_Loan_Role_Type__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>