force-app/main/default/objects/FinServ__FinancialAccountRole__c/recordTypes/FinServ__AccountRole.recordType-meta.xml
<RecordType>
    <fullName>FinServ__AccountRole</fullName>
    <active>true</active>
    <description>Role occupied by an organizational entity, such as a corporation or LLC</description>
    <label>Account Role</label>
</RecordType>