force-app/main/default/objects/FinServ__FinancialAccountRole__c/validationRules/FinServ__CannotCreateInactiveRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__CannotCreateInactiveRecord</fullName>
    <active>false</active>
    <description>Ensures that a record cannot be created as Inactive</description>
    <errorConditionFormula>ISBLANK(FinServ__EndDate__c) &amp;&amp; NOT(FinServ__Active__c)</errorConditionFormula>
    <errorMessage>A Financial Account Role cannot be created as Inactive</errorMessage>
</ValidationRule>