force-app/main/default/objects/FinServ__FinancialAccountRole__c/validationRules/FinServ__InactiveFARCannotBeEdited.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__InactiveFARCannotBeEdited</fullName>
    <active>false</active>
    <errorConditionFormula>AND(PRIORVALUE(FinServ__Active__c) == false,NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>Inactive record cannot be edited. To update FAR, you can create a new one.</errorMessage>
</ValidationRule>