force-app/main/default/objects/FinServ__FinancialAccountRole__c/validationRules/FinServ__OwnershipRolesCannotBeModified.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__OwnershipRolesCannotBeModified</fullName>
    <active>false</active>
    <description>Enforces that changes to Related Contact, Related Account, Role fields are not allowed when fields are non editable.</description>
    <errorConditionFormula>1!=1</errorConditionFormula>
    <errorMessage>This record cannot be modified because ownership can be specified on the financial account only.</errorMessage>
</ValidationRule>